Correct the IMG homepage and change on mobile responsiveness

--- a/index.css
+++ b/index.css
@@ -242,11 +242,10 @@ body {
         margin-right: 50px;
     }
 
-    .slideshow {
+    .mobile-responsive {
+        content: url('./Image/IMG_28513.jpg');
         width: 100vw;
         height: 100vh;
-        overflow: hidden;
-        position: relative;
     }
       
     section div .slide {
@@ -486,22 +485,20 @@ body {
 .slideshow {
     width: 100%;
     height: 100vh;
-    overflow: hidden;
-    position: relative;
 }
   
-.slide-container {
+/* .slide-container {
     display: flex;
     transition: transform 0.5s ease-in-out;
-}
+} */
   
 .slide {
     width: 100vw; /* Full viewport width */
     height: 600px;
     object-fit: cover;
-    position: absolute;
+    /* position: absolute;
     transition: opacity 0.5s ease-in-out;
-    opacity: 0;
+    opacity: 0; */
 }
   
 .slide.active {
